--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
     "@types/react-dom": "^18.3.0",
     "antd": "^5.19.3",
     "gh-pages": "^6.1.1",
+    "i18next": "^23.12.2",
     "postcss-scss": "^4.0.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.0",
     "react-scripts": "5.0.1",
     "sass": "^1.77.8",
     "typescript": "^4.9.5",
